# personal-financial-statement-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data-example/: example-hdfc-bank-statement.xls
scripts/: anomaly_detector_isolation_forest.py  statement_analyzer.py
src/statement_analyser/: analyzer.py  constants.py  extractor.py  helper.py  loader.py  pipeline.py  processor.py  visualizer.py
tests/: test_processor.py
