[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[project]
name = "statement-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "PyMuPDF",
    "xlrd",
    "openpyxl"
]

[project.optional-dependencies]
dev = [ "jupyter", "notebook", "ipykernel"]


[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.13.0", "pre-commit>=4.0.0"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
